Migrate LanguageDetection library to .NET Standard 2.0. Migrate tests to .NET 4.7.2/.NET 8.0 and MSTest.

--- a/LanguageDetection/LanguageDetection.csproj
+++ b/LanguageDetection/LanguageDetection.csproj
@@ -1,106 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <UsingTask TaskName="LanguageDetection.Build.BinarizeLanguageProfileTask" AssemblyFile="$(SolutionDir)LanguageDetection.Build\bin\$(Configuration)\netstandard2.0\LanguageDetection.Build.dll" />
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B94DF83C-306C-4C28-B5F3-541AD9CBFAA6}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LanguageDetection</RootNamespace>
-    <AssemblyName>LanguageDetection</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <Title>Language Detection</Title>
+    <Authors>Pēteris Ņikiforovs</Authors>
+    <Product>Language Detection</Product>
+    <Description>.NET Port of Language Detection Library for Java</Description>
+    <Copyright>Copyright © Pēteris Ņikiforovs 2014</Copyright>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0</FileVersion>
+    <Version>1.1.0</Version>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="LanguageDetector.cs" />
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="LanguageProfile.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Profiles\af" />
-    <None Include="Profiles\ar" />
-    <None Include="Profiles\bg" />
-    <None Include="Profiles\bn" />
-    <None Include="Profiles\cs" />
-    <None Include="Profiles\da" />
-    <None Include="Profiles\de" />
-    <None Include="Profiles\el" />
-    <None Include="Profiles\en" />
-    <None Include="Profiles\es" />
-    <None Include="Profiles\et" />
-    <None Include="Profiles\fa" />
-    <None Include="Profiles\fi" />
-    <None Include="Profiles\fr" />
-    <None Include="Profiles\gu" />
-    <None Include="Profiles\he" />
-    <None Include="Profiles\hi" />
-    <None Include="Profiles\hr" />
-    <None Include="Profiles\hu" />
-    <None Include="Profiles\id" />
-    <None Include="Profiles\it" />
-    <None Include="Profiles\ja" />
-    <None Include="Profiles\kn" />
-    <None Include="Profiles\ko" />
-    <None Include="Profiles\lt" />
-    <None Include="Profiles\lv" />
-    <None Include="Profiles\mk" />
-    <None Include="Profiles\ml" />
-    <None Include="Profiles\mr" />
-    <None Include="Profiles\ne" />
-    <None Include="Profiles\nl" />
-    <None Include="Profiles\no" />
-    <None Include="Profiles\pa" />
-    <None Include="Profiles\pl" />
-    <None Include="Profiles\pt" />
-    <None Include="Profiles\ro" />
-    <None Include="Profiles\ru" />
-    <None Include="Profiles\sk" />
-    <None Include="Profiles\sl" />
-    <None Include="Profiles\so" />
-    <None Include="Profiles\sq" />
-    <None Include="Profiles\sv" />
-    <None Include="Profiles\sw" />
-    <None Include="Profiles\ta" />
-    <None Include="Profiles\te" />
-    <None Include="Profiles\th" />
-    <None Include="Profiles\tl" />
-    <None Include="Profiles\tr" />
-    <None Include="Profiles\uk" />
-    <None Include="Profiles\ur" />
-    <None Include="Profiles\vi" />
-    <None Include="Profiles\zh-cn" />
-    <None Include="Profiles\zh-tw" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <UsingTask TaskName="LanguageDetection.Build.BinarizeLanguageProfileTask" AssemblyFile="$(SolutionDir)LanguageDetection.Build\bin\$(Configuration)\LanguageDetection.Build.dll" />
-  <Target Name="BeforeBuild">
+  <Target Name="BinarizeLanguageProfile" BeforeTargets="BeforeBuild">
     <ItemGroup>
       <Profiles Include="Profiles\*" />
     </ItemGroup>
@@ -110,11 +22,9 @@
     <MakeDir Directories="$(IntermediateOutputPath)Profiles" />
     <BinarizeLanguageProfileTask InputFilename="%(Profiles.Identity)" OutputFilename="$(IntermediateOutputPath)%(Profiles.Identity).bin.gz" />
     <ItemGroup>
-      <EmbeddedResource Include="$(IntermediateOutputPath)Profiles\%(Languages.Identity).bin.gz">
+      <EmbeddedResource Include="$(IntermediateOutputPath)Profiles\%(Languages.Identity).bin.gz" WithCulture="false">
         <LogicalName>$(RootNamespace).Profiles.%(Languages.Identity).bin.gz</LogicalName>
       </EmbeddedResource>
     </ItemGroup>
-  </Target>
-  <Target Name="AfterBuild">
   </Target>
 </Project>
